[package]
name = "rust"
version = "0.1.0"
authors = ["Mitchell Hanberg <mitch@mitchellhanberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"
